--- a/test/Resources/Views/Home/Index.en.resx
+++ b/test/Resources/Views/Home/Index.en.resx
@@ -120,4 +120,7 @@
   <data name="Category" xml:space="preserve">
     <value>კატეგორია</value>
   </data>
+  <data name="hehe" xml:space="preserve">
+    <value>huhu</value>
+  </data>
 </root>
