--- a/test/Resources/SharedResources.en.resx
+++ b/test/Resources/SharedResources.en.resx
@@ -117,8 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AboutUs" xml:space="preserve">
+  <data name="About Us" xml:space="preserve">
     <value>ჩვენ შესახებ</value>
+  </data>
+  <data name="Blog" xml:space="preserve">
+    <value>გზამკვლევები</value>
   </data>
   <data name="Contacts" xml:space="preserve">
     <value>დაგვიკავშირდით</value>
@@ -137,5 +140,8 @@
   </data>
   <data name="Info3" xml:space="preserve">
     <value>საზოგადოებრივი უსაფრთხოების მართვის ცენტრი</value>
+  </data>
+  <data name="Media" xml:space="preserve">
+    <value>მედია</value>
   </data>
 </root>
