--- a/test/Resources/SharedResources.ge.resx
+++ b/test/Resources/SharedResources.ge.resx
@@ -117,8 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AboutUs" xml:space="preserve">
-    <value>AboutUs</value>
+  <data name="About Us" xml:space="preserve">
+    <value>About Us</value>
+  </data>
+  <data name="Blog" xml:space="preserve">
+    <value>Blog</value>
   </data>
   <data name="Contacts" xml:space="preserve">
     <value>Contacts</value>
@@ -137,5 +140,8 @@
   </data>
   <data name="Info3" xml:space="preserve">
     <value>Info3</value>
+  </data>
+  <data name="Media" xml:space="preserve">
+    <value>Media</value>
   </data>
 </root>
