--- a/test/Resources/SharedResources.uk.resx
+++ b/test/Resources/SharedResources.uk.resx
@@ -121,7 +121,7 @@
     <value>ПРО НАС</value>
   </data>
   <data name="Blog" xml:space="preserve">
-    <value>Blog</value>
+    <value>ПОСIБНИКИ</value>
   </data>
   <data name="Contacts" xml:space="preserve">
     <value>ЗВ’ЯЖІТЬСЯ З НАМИ</value>
@@ -142,6 +142,6 @@
     <value>Центр управління громадською безпекою</value>
   </data>
   <data name="Media" xml:space="preserve">
-    <value>Media</value>
+    <value>МЕДIА</value>
   </data>
 </root>
