--- a/test/Resources/SharedResources.uk.resx
+++ b/test/Resources/SharedResources.uk.resx
@@ -144,4 +144,7 @@
   <data name="Media" xml:space="preserve">
     <value>МЕДIА</value>
   </data>
+  <data name="Subscribe" xml:space="preserve">
+    <value>Підписка</value>
+  </data>
 </root>
