--- a/test/Resources/SharedResources.ge.resx
+++ b/test/Resources/SharedResources.ge.resx
@@ -144,4 +144,7 @@
   <data name="Media" xml:space="preserve">
     <value>Media</value>
   </data>
+  <data name="Subscribe" xml:space="preserve">
+    <value>Subscribe</value>
+  </data>
 </root>
